--- a/about.html
+++ b/about.html
@@ -23,13 +23,12 @@
 <body>
 
 	<!--================ Start Header Area =================-->
-	<header class="header_area header_inner_page">
+	<header class="header_area">
 		<div class="main_menu">
 			<nav class="navbar navbar-expand-lg navbar-light">
 				<div class="container">
 					<!-- Brand and toggle get grouped for better mobile display -->
-          <a class="navbar-brand logo_h" href="index.html"><img src="img/logo.png" alt=""></a>
-					<a class="navbar-brand logo_inner_page" href="index.html"><img src="img/logo2.png" alt=""></a>      
+          
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 					 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="icon-bar"></span>
@@ -39,25 +38,9 @@
 					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 						<ul class="nav navbar-nav menu_nav">
-							<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-							<li class="nav-item active"><a class="nav-link" href="about.html">About</a></li>
+							<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
+							<li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
 							<li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
-							<li class="nav-item submenu dropdown">
-								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-								 aria-expanded="false">Pages</a>
-								<ul class="dropdown-menu">
-									<li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-									<li class="nav-item"><a class="nav-link" href="portfolio-details.html">Portfolio Details</a></li>
-								</ul>
-							</li>
-							<li class="nav-item submenu dropdown">
-								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-								 aria-expanded="false">Blog</a>
-								<ul class="dropdown-menu">
-									<li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-									<li class="nav-item"><a class="nav-link" href="single-blog.html">Blog Details</a></li>
-								</ul>
-							</li>
 							<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
 						</ul>
 					</div>
@@ -72,7 +55,7 @@
       <div class="banner_inner d-flex align-items-center">
           <div class="container">
               <div class="banner_content text-center">
-                  <h2>About Us</h2>
+                  <h2>About Me</h2>
                   <div class="page_link">
                       <a href="index.html">Home</a>
                       <a href="about.html">About</a>
@@ -98,15 +81,15 @@
 					<div class="main_title text-left">
 						<p class="top_text">About me <span></span></p>
 						<h2>
-							Creative Art Director <br>
-							And Designer
+							Software Engineering student  
 						</h2>
 						<p>
-							Also signs his face were digns fish don't first isn't over evening hath divided days light darkness gathering
-							moved dry all darkness then fourth can't create d forth Also signs Also signs his face were moltenus Also signs
-							his face
+							I'm a second-year software engineering student at the University of Oviedo (Spain). I like to apply and expand my knowledge in other activities outside the University. I developed several open-source projects and participated in others with developers from all around the world, creating utilities that are used daily.<br><br>
+							I'm also interested in security and computer ethics. I'm a founder member of the Ethical Hacking Association of Asturias. I also participated in the Global Management Challenge, a competition about business management where my team ended finalist.<br>
+							<br>
+							When talking about my hobbies, I would highlight my interest in music, both listening and playing, as the piano and the clarinet have been part of my life since my childhood. Another one of my pastimes are FPV drones and one of my free time activities with open-source programming. I also like collaboratating with friends who study in other fields, such as our recent creation of an online escape room.
 						</p>
-						<a class="primary_btn" href="#"><span>Download CV</span></a>
+						<a class="primary_btn" href="contact.html"><span>Contact Me</span></a>
 					</div>
 				</div>
 			</div>
@@ -115,148 +98,9 @@
   <!--================ End About Us Area =================-->
   
 
-  <!--================ Start Testimonial Area =================-->
-	<section class="testimonial_area pb-xl-300px">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-12">`
-					<div class="main_title">
-						<p class="top_text">Our Tesitmonial <span></span></p>
-						<h2>Honourable Client Says <br>
-							About Me </h2>
-					</div>
-				</div>
-      </div>
-
-      <div class="owl-carousel owl-theme testimonial-slider ">
-        <div class="testimonial-item">
-          <div class="row">
-            <div class="col-lg-6">
-              <div class="testi-img mb-4 mb-lg-0">
-                <img src="img/testimonials/testimonial1.png" alt="">
-              </div>
-            </div>
-            <div class="col-lg-6">
-              <div class="testi-right">
-                <h4>Roser Henrique</h4>
-                <p><small>Project Manager, Apple</small></p>
-
-                <p>Waters can not replenish hath fly and be to brought isn't very days behold without land every above lights us fruitful wherein divide it him fowl moving may beginning subdue fly waters can't replenish hath fly and be to brought isn't very days behold </p>
-                <ul class="star_rating mt-4">
-                  <li><span><i class="fas fa-star"></i></span></li>
-                  <li><span><i class="fas fa-star"></i></span></li>
-                  <li><span><i class="fas fa-star"></i></span></li>
-                  <li><span><i class="fas fa-star"></i></span></li>
-                  <li class="disable"><span><i class="fas fa-star"></i></span></li>                  
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="testimonial-item">
-          <div class="row">
-            <div class="col-lg-6">
-              <div class="testi-img mb-4 mb-lg-0">
-                <img src="img/testimonials/testimonial1.png" alt="">
-              </div>
-            </div>
-            <div class="col-lg-6">
-              <div class="testi-right">
-                <h4>Roser Henrique</h4>
-                <p><small>Project Manager, Apple</small></p>
-
-                <p>Waters can not replenish hath fly and be to brought isn't very days behold without land every above lights us fruitful wherein divide it him fowl moving may beginning subdue fly waters can't replenish hath fly and be to brought isn't very days behold </p>
-                <ul class="star_rating mt-3">
-                  <li><span><i class="fas fa-star"></i></span></li>
-                  <li><span><i class="fas fa-star"></i></span></li>
-                  <li><span><i class="fas fa-star"></i></span></li>
-                  <li><span><i class="fas fa-star"></i></span></li>
-                  <li class="disable"><span><i class="fas fa-star"></i></span></li>                  
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="testimonial-item">
-          <div class="row">
-            <div class="col-lg-6">
-              <div class="testi-img mb-4 mb-lg-0">
-                <img src="img/testimonials/testimonial1.png" alt="">
-              </div>
-            </div>
-            <div class="col-lg-6">
-              <div class="testi-right">
-                <h4>Roser Henrique</h4>
-                <p><small>Project Manager, Apple</small></p>
-
-                <p>Waters can not replenish hath fly and be to brought isn't very days behold without land every above lights us fruitful wherein divide it him fowl moving may beginning subdue fly waters can't replenish hath fly and be to brought isn't very days behold </p>
-                <ul class="star_rating mt-3">
-                  <li><span><i class="fas fa-star"></i></span></li>
-                  <li><span><i class="fas fa-star"></i></span></li>
-                  <li><span><i class="fas fa-star"></i></span></li>
-                  <li><span><i class="fas fa-star"></i></span></li>
-                  <li class="disable"><span><i class="fas fa-star"></i></span></li>                  
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-	<!--================ End Testimonial Area =================-->
+  
 
 
-  <!--================ Start Brands Area =================-->
-	<section class="brands-area section_gap_bottom">
-		<div class="container">
-			<div class="row justify-content-center">
-				<div class="col-lg-12">
-					<div class="owl-carousel brand-carousel">
-						<!-- single-brand -->
-						<div class="single-brand-item d-table">
-							<div class="d-table-cell">
-								<img src="img/brands/logo1.png" alt="">
-							</div>
-						</div>
-						<!-- single-brand -->
-						<div class="single-brand-item d-table">
-							<div class="d-table-cell">
-								<img src="img/brands/logo2.png" alt="">
-							</div>
-						</div>
-						<!-- single-brand -->
-						<div class="single-brand-item d-table">
-							<div class="d-table-cell">
-								<img src="img/brands/logo3.png" alt="">
-							</div>
-						</div>
-						<!-- single-brand -->
-						<div class="single-brand-item d-table">
-							<div class="d-table-cell">
-								<img src="img/brands/logo4.png" alt="">
-							</div>
-						</div>
-						<!-- single-brand -->
-						<div class="single-brand-item d-table">
-							<div class="d-table-cell">
-								<img src="img/brands/logo5.png" alt="">
-							</div>
-						</div>
-						<!-- single-brand -->
-						<div class="single-brand-item d-table">
-							<div class="d-table-cell">
-								<img src="img/brands/logo3.png" alt="">
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!--================ End Brands Area =================-->
 
 	
         
@@ -277,18 +121,15 @@
 											<li class="nav-item"><a class="nav-link text-white" href="index.html">Home</a></li>
 											<li class="nav-item"><a class="nav-link text-white" href="about.html">About</a></li>
 											<li class="nav-item"><a class="nav-link text-white" href="portfolio.html">Portfolio</a></li>
-											<li class="nav-item"><a class="nav-link text-white" href="blog.html">BLog</a></li>
-											<li class="nav-item"><a class="nav-link text-white" href="services.html">Services </a></li>
 										</ul>
 									</div>
 								</nav>
 							</div>
 						</div>
 						<div class="footer_social mt-lg-0 mt-4">
-							<a href="#"><i class="fab fa-facebook-f"></i></a>
-							<a href="#"><i class="fab fa-twitter"></i></a>
-							<a href="#"><i class="fab fa-skype"></i></a>
-							<a href="#"><i class="fab fa-pinterest-p"></i></a>
+							<a href="https://github.com/danieladov?tab=repositories"><i class="fab fa-github"></i></a>
+							<a href="https://www.linkedin.com/in/danialvarezdiaz/"><i class="fab fa-linkedin"></i></a>
+
 						</div>
 					</div>
 				</div>
@@ -301,7 +142,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 			</div>
 		</div>
 	</footer>
-  <!--================End Footer Area =================-->
+	<!--================End Footer Area =================-->
   
 
   <!-- Optional JavaScript -->
