--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -28,8 +28,7 @@
 			<nav class="navbar navbar-expand-lg navbar-light">
 				<div class="container">
 					<!-- Brand and toggle get grouped for better mobile display -->
-          <a class="navbar-brand logo_h" href="index.html"><img src="img/logo.png" alt=""></a>
-					<a class="navbar-brand logo_inner_page" href="index.html"><img src="img/logo2.png" alt=""></a>      
+          
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 					 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="icon-bar"></span>
@@ -201,18 +200,15 @@
 											<li class="nav-item"><a class="nav-link text-white" href="index.html">Home</a></li>
 											<li class="nav-item"><a class="nav-link text-white" href="about.html">About</a></li>
 											<li class="nav-item"><a class="nav-link text-white" href="portfolio.html">Portfolio</a></li>
-											<li class="nav-item"><a class="nav-link text-white" href="blog.html">BLog</a></li>
-											<li class="nav-item"><a class="nav-link text-white" href="services.html">Services </a></li>
 										</ul>
 									</div>
 								</nav>
 							</div>
 						</div>
 						<div class="footer_social mt-lg-0 mt-4">
-							<a href="#"><i class="fab fa-facebook-f"></i></a>
-							<a href="#"><i class="fab fa-twitter"></i></a>
-							<a href="#"><i class="fab fa-skype"></i></a>
-							<a href="#"><i class="fab fa-pinterest-p"></i></a>
+							<a href="https://github.com/danieladov?tab=repositories"><i class="fab fa-github"></i></a>
+							<a href="https://www.linkedin.com/in/danialvarezdiaz/"><i class="fab fa-linkedin"></i></a>
+
 						</div>
 					</div>
 				</div>
@@ -225,7 +221,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 			</div>
 		</div>
 	</footer>
-  <!--================End Footer Area =================-->
+	<!--================End Footer Area =================-->
   
 
   <!-- Optional JavaScript -->
