--- a/portfolio.html
+++ b/portfolio.html
@@ -23,13 +23,12 @@
 <body>
 
 	<!--================ Start Header Area =================-->
-	<header class="header_area header_inner_page">
+	<header class="header_area">
 		<div class="main_menu">
 			<nav class="navbar navbar-expand-lg navbar-light">
 				<div class="container">
 					<!-- Brand and toggle get grouped for better mobile display -->
-          <a class="navbar-brand logo_h" href="index.html"><img src="img/logo.png" alt=""></a>
-					<a class="navbar-brand logo_inner_page" href="index.html"><img src="img/logo2.png" alt=""></a>      
+          
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 					 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="icon-bar"></span>
@@ -39,25 +38,9 @@
 					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 						<ul class="nav navbar-nav menu_nav">
-							<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+							<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
 							<li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-							<li class="nav-item active"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
-							<li class="nav-item submenu dropdown">
-								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-								 aria-expanded="false">Pages</a>
-								<ul class="dropdown-menu">
-									<li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-									<li class="nav-item"><a class="nav-link" href="portfolio-details.html">Portfolio Details</a></li>
-								</ul>
-							</li>
-							<li class="nav-item submenu dropdown">
-								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-								 aria-expanded="false">Blog</a>
-								<ul class="dropdown-menu">
-									<li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-									<li class="nav-item"><a class="nav-link" href="single-blog.html">Blog Details</a></li>
-								</ul>
-							</li>
+							<li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
 							<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
 						</ul>
 					</div>
@@ -91,13 +74,12 @@
 				<div class="col-lg-12">
 					<div class="main_title">
 						<p class="top_text">Our Portfolio <span></span></p>
-						<h2>Check Our Recent <br>
-							Client Work </h2>
+						<h2>Check My Recent Work </h2>
 					</div>
 				</div>
 			</div>
 
-			<div class="filters portfolio-filter">
+			<!-- <div class="filters portfolio-filter">
 				<ul>
 					<li class="active" data-filter="*">all</li>
 					<li data-filter=".popular">popular</li>
@@ -105,7 +87,7 @@
 					<li data-filter=".following">following</li>
 					<li data-filter=".upcoming">upcoming</li>
 				</ul>
-			</div>
+			</div> -->
 
 			<div class="filters-content">
 				<div class="row portfolio-grid">
@@ -154,7 +136,7 @@
 						</div>
 					</div>
 
-					<div class="col-lg-6 col-md-6 all popular">
+					<!-- <div class="col-lg-6 col-md-6 all popular">
 						<div class="single_portfolio">
 							<img class="img-fluid w-100" src="img/portfolio/p6.jpg" alt="">
 							<div class="overlay"></div>
@@ -174,7 +156,7 @@
 								<p>Art, Illustration</p>
 							</div>
 						</div>
-					</div>
+					</div> -->
 
 				</div>
 			</div>
@@ -200,18 +182,15 @@
 											<li class="nav-item"><a class="nav-link text-white" href="index.html">Home</a></li>
 											<li class="nav-item"><a class="nav-link text-white" href="about.html">About</a></li>
 											<li class="nav-item"><a class="nav-link text-white" href="portfolio.html">Portfolio</a></li>
-											<li class="nav-item"><a class="nav-link text-white" href="blog.html">BLog</a></li>
-											<li class="nav-item"><a class="nav-link text-white" href="services.html">Services </a></li>
 										</ul>
 									</div>
 								</nav>
 							</div>
 						</div>
 						<div class="footer_social mt-lg-0 mt-4">
-							<a href="#"><i class="fab fa-facebook-f"></i></a>
-							<a href="#"><i class="fab fa-twitter"></i></a>
-							<a href="#"><i class="fab fa-skype"></i></a>
-							<a href="#"><i class="fab fa-pinterest-p"></i></a>
+							<a href="https://github.com/danieladov?tab=repositories"><i class="fab fa-github"></i></a>
+							<a href="https://www.linkedin.com/in/danialvarezdiaz/"><i class="fab fa-linkedin"></i></a>
+
 						</div>
 					</div>
 				</div>
@@ -224,7 +203,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 			</div>
 		</div>
 	</footer>
-  <!--================End Footer Area =================-->
+	<!--================End Footer Area =================-->
   
 
   <!-- Optional JavaScript -->
