--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
       <div class="banner_inner d-flex align-items-center">
           <div class="container">
               <div class="banner_content text-center">
-                  <h2>Contact Us</h2>
+                  <h2>Contact</h2>
                   <div class="page_link">
                       <a href="index.html">Home</a>
                       <a href="contact.html">Contact</a>
@@ -119,7 +119,7 @@
             <span class="contact-info__icon"><i class="ti-email"></i></span>
             <div class="media-body">
               <h3><a href="mailto:daniarezdiaz@gmail.com">daniarezdiaz@gmail.com</a></h3>
-              <p>Send us your query anytime!</p>
+              <p>Send me your query anytime!</p>
             </div>
           </div>
         </div>
