change github url

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 							<h1 class="text-uppercase">I am Daniel Álvarez</h1>
 							<h5 class="text-uppercase">Software engineering student</h5>
 							<div class="social_icons my-5">
-								<a href="https://github.com/danieladov?tab=repositories"><i class="ti-github"></i></a>
+								<a href="https://github.com/danieladov"><i class="ti-github"></i></a>
 								<a href="https://www.linkedin.com/in/danialvarezdiaz/"><i class="fab fa-linkedin"></i></a>
 
 							</div>
@@ -266,7 +266,7 @@
 							</div>
 						</div>
 						<div class="footer_social mt-lg-0 mt-4">
-							<a href="https://github.com/danieladov?tab=repositories"><i class="fab fa-github"></i></a>
+							<a href="https://github.com/danieladov"><i class="fab fa-github"></i></a>
 							<a href="https://www.linkedin.com/in/danialvarezdiaz/"><i class="fab fa-linkedin"></i></a>
 
 						</div>
