--- a/portfolio.html
+++ b/portfolio.html
@@ -188,7 +188,7 @@
 							</div>
 						</div>
 						<div class="footer_social mt-lg-0 mt-4">
-							<a href="https://github.com/danieladov?tab=repositories"><i class="fab fa-github"></i></a>
+							<a href="https://github.com/danieladov"><i class="fab fa-github"></i></a>
 							<a href="https://www.linkedin.com/in/danialvarezdiaz/"><i class="fab fa-linkedin"></i></a>
 
 						</div>
