--- a/portfolio-virtual-escape-room.html
+++ b/portfolio-virtual-escape-room.html
@@ -82,7 +82,7 @@
 
             <div class="row">
               <div class="col-lg-7 mb-4 mb-lg-0">
-               <p><a href="https://virtualescaperoom.es">Virtual Escape room </a> is a Spanish free online escape room that 2 friends and me create during my first and second year of the grade.
+               <p><a href="https://virtualescaperoom.es">Virtual Escape room </a> is a Spanish free online escape room that 2 friends and I create during my first and second year of grade.
 
 				</p>
 			</div>
