Added fourth and contact fix

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 							Software Engineering student <br>
 						</h2>
 						<p>
-							I'm a second-year software engineering student at the University of Oviedo (Spain). I like to apply and expand my knowledge in other activities outside the University. I developed several open-source projects and participated in others with developers from all around the world, creating utilities that are used daily.<br><br>
+							I'm a fourth-year software engineering student at the University of Oviedo (Spain). I like to apply and expand my knowledge in other activities outside the University. I developed several open-source projects and participated in others with developers from all around the world, creating utilities that are used daily.<br><br>
 							
 						</p>
 						<a class="primary_btn" href="about.html"><span>Learn More About Me</span></a>
